--- a/index.html
+++ b/index.html
@@ -1513,7 +1513,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <a href="" class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</a>
+                            <a target="__blank" href="https://www.google.com/maps/dir//onecare+bellandur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bae13af860deb99:0x370fde6582075187?sa=X&ved=2ahUKEwj304WTlMP1AhXQUWwGHXytBxgQ9Rd6BAgrEAU" class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class="center-txt white f-s-12 f-s-i f-w-700">BOOK A
@@ -1568,7 +1568,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <a href="" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
+                            <a target="__blank" href="https://www.google.com/maps/dir/12.9129744,77.6421572/onecare+st+bed/@12.923979,77.6271344,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bae15339609fa05:0xe4b01212063f290e!2m2!1d77.6304605!2d12.9348738" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class=" f-s-12 f-s-i f-w-700 white center-txt">BOOK A
