--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ background-repeat: no-repeat;
         }
 
         .loc-detail {
-            margin-right: 20px;
+            margin:0px 10px;
         }
 
         #FAQ {
@@ -775,7 +775,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="slide-wrapper">
                         <div class="slide" style="background-image: url('./assest/circle-blu.svg');">
-                            <div>
+                            <div style=" z-index:2;">
 
                                 <h1 class="f-s-30 f-w-700 pink-txt">Live A Life Beyond Diabetes,<br /> Starting Today.
                                 </h1>
@@ -803,7 +803,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="slide-wrapper">
                         <div class="slide"  style="  background-image: url('./assest/circle.svg');">
-                            <div>
+                            <div style=" z-index:2;">
                                 <h1 class='f-s-30 f-w-700;'>Don't Just Fight Diabetes,<br /> Understand & Manage It.
                                 </h1>
 
@@ -1478,7 +1478,7 @@ background-repeat: no-repeat;
                                     </amp-img>
                                 </div>
                                 <div>
-                                    <p class="f-s-14 f-w-400">Opposit to, Sobha Quartz, 227, Ground Floor, Off, Outer
+                                    <p class="f-s-12 f-w-400">Opposit to, Sobha Quartz, 227, Ground Floor, Off, Outer
                                         Ring Rd, Green Glen
                                         Layout,
                                         Bellandur, Bengaluru, Karnataka 560103
@@ -1486,7 +1486,7 @@ background-repeat: no-repeat;
                                 </div>
 
                             </div>
-                            <div class="flex">
+                            <div class="flex m-t-10" >
                                 <div style="width:12%; margin-right: 5px;">
                                     <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
@@ -1494,9 +1494,9 @@ background-repeat: no-repeat;
                                 </div>
                                 <a href="#080 4680 8989" class=" f-s-16 f-w-600">080 4568 7460</a>
                             </div>
-                            <div class="flex m-t-10">
-                                <h3 style="margin: 0px 5px;" class="f-s-12">4.9</h3>
-                                <div style="width: 25%;">
+                            <div class="flex" style="margin: 0px 25px;">
+                                <h3 style="margin: 0px 5px;" class="f-s-14">4.9</h3>
+                                <div style="width: 50%;">
                                     <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -1513,7 +1513,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <a target="__blank" href="https://www.google.com/maps/dir//onecare+bellandur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bae13af860deb99:0x370fde6582075187?sa=X&ved=2ahUKEwj304WTlMP1AhXQUWwGHXytBxgQ9Rd6BAgrEAU" class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</a>
+                            <a target="_blank" href="https://www.google.com/maps/dir//onecare+bellandur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bae13af860deb99:0x370fde6582075187?sa=X&ved=2ahUKEwj304WTlMP1AhXQUWwGHXytBxgQ9Rd6BAgrEAU" class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class="center-txt white f-s-12 f-s-i f-w-700">BOOK A
@@ -1533,7 +1533,7 @@ background-repeat: no-repeat;
                                     </amp-img>
                                 </div>
                                 <div>
-                                    <p class="f-s-14 f-w-400">No. 81, ST Bed Entrance, off 80 Feet Road, Koramangala 4th
+                                    <p class="f-s-12 f-w-400">No. 81, ST Bed Entrance, off 80 Feet Road, Koramangala 4th
                                         Block, Koramangala,
                                         Bengaluru, Karnataka 560034
 
@@ -1542,16 +1542,16 @@ background-repeat: no-repeat;
 
                             </div>
                             <div class="flex">
-                                <div style="width:12%; margin-right: 5px;">
+                                <div style="width:12%; margin-right: 5px;" class="m-t-10">
                                     <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
                                     </amp-img>
                                 </div>
                                 <a href="tel:080 4568 7460" class="f-s-16 f-w-600">080 4568 7460</a>
                             </div>
-                            <div class="flex  m-t-10">
-                                <h3 style="margin:0px 5px;" class="f-s-12">4.9</h3>
-                                <div style="width: 25%;">
+                            <div class="flex" style="margin: 0px 25px;">
+                                <h3 style="margin:0px 5px;" class="f-s-14">4.9</h3>
+                                <div style="width: 50%;">
                                     <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -1568,7 +1568,7 @@ background-repeat: no-repeat;
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <a target="__blank" href="https://www.google.com/maps/dir/12.9129744,77.6421572/onecare+st+bed/@12.923979,77.6271344,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bae15339609fa05:0xe4b01212063f290e!2m2!1d77.6304605!2d12.9348738" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
+                            <a target="_blank" href="https://www.google.com/maps/dir/12.9129744,77.6421572/onecare+st+bed/@12.923979,77.6271344,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bae15339609fa05:0xe4b01212063f290e!2m2!1d77.6304605!2d12.9348738" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class=" f-s-12 f-s-i f-w-700 white center-txt">BOOK A
@@ -1587,7 +1587,7 @@ background-repeat: no-repeat;
                                     </amp-img>
                                 </div>
                                 <div>
-                                    <p class="f-s-14 f-w-400">505/1 1st A Cross Indiranagar 1st Stage (Near CMH
+                                    <p class="f-s-12 f-w-400">505/1 1st A Cross Indiranagar 1st Stage (Near CMH
                                         Hospital/Costa Coffee),
                                         Bengaluru, Karnataka 560038
 
@@ -1596,16 +1596,16 @@ background-repeat: no-repeat;
 
                             </div>
                             <div class="flex">
-                                <div style="width:12%; margin-right: 5px;">
+                                <div style="width:12%; margin-right: 5px; " class="m-t-10">
                                     <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
                                     </amp-img>
                                 </div>
                                 <a href="tel:080 4568 7460" class="f-s-16 f-w-600 ">080 4568 7460</a>
                             </div>
-                            <div class="flex  m-t-10">
-                                <h3 style="margin:0px  5px; " class="f-s-12">4.9</h3>
-                                <div style="width: 25%;">
+                            <div style="margin: 0px 25px;" class="flex ">
+                                <h3 style="margin:0px  5px; " class="f-s-14">4.9</h3>
+                                <div style="width: 50%;">
                                     <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -1826,7 +1826,7 @@ background-repeat: no-repeat;
 
 
         </section>
-        <section class="white">
+        <section style="background:white">
             <h3 class="f-s-18 f-w-700 ">In the news</h3>
             <div class="flex">
 
@@ -2042,7 +2042,7 @@ background-repeat: no-repeat;
 flex-direction: column;
 align-items: flex-end;">
                 <a href=" https://wa.me/918951893293">
-                    <amp-img style="width: 50px;" src="./assest/WhatsApp.svg" width="1" height="1" layout="responsive"
+                    <amp-img style="width: 70px;" src="./assest/WhatsApp.svg" width="1" height="1" layout="responsive"
                         alt="logo">
                     </amp-img>
                 </a>
