--- a/index.html
+++ b/index.html
@@ -671,6 +671,7 @@ background-repeat: no-repeat;
             display: flex;
             position: sticky;
             bottom: 0;
+            z-index: 5;
             flex-direction: column;
             justify-content: center;
 
