--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <a href="" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
+                            <a target="_blank" href="https://www.google.com/maps/place/Sattva+Superspeciality+Centre+-+Diabetes,+Thyroid+%26+Endocrinology+Clinic+%2F+Child+Care+Clinic/@12.9787463,77.6440287,15z/data=!4m5!3m4!1s0x0:0x510c519d7abd0642!8m2!3d12.9787463!4d77.6440287?sa=X&ved=2ahUKEwiBuIOAm8P1AhWyzTgGHRAMAnYQ_BJ6BAgbEAU&shorturl=1" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class="white f-s-12 f-s-i f-w-700 center-txt">BOOK A
