--- a/web.html
+++ b/web.html
@@ -2,352 +2,148 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OneCare - A Chain of Smart Diabetes Clinics</title>
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>One Care</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./styles.css" />
 
+
+
+
+
+
+
+ <style>
+.bg-pink-shd
+{
+    background: linear-gradient(180deg, #FFAFC6 -4.33%, #FFEFD4 109.25%),
+linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
+
+}
+.bg-blue-shd{
+    background: linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
+
+}
+.pink-txt{
+   color: #F1647B;
+
+}
+.blue-txt{
+   color: #4E84C1;
+}
+.orange-txt{
+    color: #F07162;
+
+}
+
+
+ </style>   
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <nav class="flex">
-                <div>
-                    <img src="./assest/OneCare_Logo-03_3.webp" alt="logo">
+    <nav>
+        <div class="container mx-auto">
+            <div class="flex items-center">
+                <div id="logo mr-3">
+                    <img src="./assets/logo.svg" alt="onecare-logo" />
                 </div>
-                <div class="flex1">
-                    <div class="blu-bg flex button"> <img src="./assest/Phone (1).webp" alt="logo"> Contact us</div>
-
-                    <div class="orange-bg flex button"> <img src="./assest/Planner.webp" width="25px" alt="logo">Book an
-                        appointment</div>
+                <div class="logo-text ml-3">
+                    <p>A CHAIN OF SMART</p>
+                    <p>DIABETES CLINICS</p>
                 </div>
-            </nav>
-        </header>
-        <section id="top">
-
-
-            <div class="responsive">
-                <div>
-                    <div class="flex">
-                        <div class="flex1-col">
-                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                            <div class="flex">
-                                <div class="flex1">
-                                    <img src="./assest/Rh+.webp" alt="logo">
-                                    <h2 class="gray-txt">92/115</h2>
-                                </div>
-                                <div class="flex1">
-                                    <img src="./assest/Pill.webp" alt="logo">
-                                    <h2 class="gray-txt">50% Reduction</h2>
-                                </div>
-                            </div>
-
-                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
-                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
-                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
-
-
-                            <div class="blu-bg button">
-                                <h3>Get Started.</h3>
-                            </div>
-                        </div>
-                        <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="flex">
-                        <div class="flex1-col">
-                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                            <div class="flex">
-                                <div class="flex1">
-                                    <img src="./assest/Rh+.webp" alt="logo">
-                                    <h2 class="gray-txt">92/115</h2>
-                                </div>
-                                <div class="flex1">
-                                    <img src="./assest/Pill.webp" alt="logo">
-                                    <h2 class="gray-txt">50% Reduction</h2>
-                                </div>
-                            </div>
-
-                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
-                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
-                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
-
-
-                            <div class="blu-bg button">
-                                <h3>Get Started.</h3>
-                            </div>
-                        </div>
-                        <div><img src="./assest/slack-imgs-1 1.webp" alt=""></div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="flex">
-                        <div class="flex1-col">
-                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                            <div class="flex">
-                                <div class="flex1">
-                                    <img src="./assest/Rh+.webp" alt="logo">
-                                    <h2 class="gray-txt">92/115</h2>
-                                </div>
-                                <div class="flex1">
-                                    <img src="./assest/Pill.webp" alt="logo">
-                                    <h2 class="gray-txt">50% Reduction</h2>
-                                </div>
-                            </div>
-
-                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
-                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
-                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
-
-
-                            <div class="blu-bg button">
-                                <h3>Get Started.</h3>
-                            </div>
-                        </div>
-                        <div><img src="./assest/istockphoto-1192489366-612x612 1.webp" alt=""></div>
-                    </div>
-                </div>
-
-
-
-
             </div>
-
-        </section>
-        <section id="form-section">
-            <div class="flex">
-                <div>
-                    <h1 class="orange-txt">We know diabetes is a life-altering diagnosis.</h1>
-                    <h2>Our Comprehensive Clinical Care consists of 1-1 in-depth doctor consultation, expert dietitian
-                        sessions, and most importantly, a structured roadmap for your diabetes care.
+            <div class="contact"></div>
+        </div>
+    </nav>
+    <main>
+        <section id="hero"></section>
+        <section id="form" class="bg-red-50">
+            <div class="container flex mx-auto py-10">
+                <div class="container">
+                    <h2 class=" font-bold text-3xl text-red-400 my-5">We know diabetes is a <br /> life-altering
+                        diagnosis.</h2>
+                    <p>
+                        Our Comprehensive Clinical Care consists of 1-1 <br />in-depth doctor consultation, expert
+                        dietitian sessions, <br />and most importantly, a structured roadmap for your <br />diabetes
+                        care.
                         <br /><br />
                         Visit your local OneCare clinic and let's fight it together.
-                    </h2>
+                    </p>
                 </div>
-                <div>
-                    <h1>
-                        Start your <span class="orange-txt"> personalised diabetic program today!</span>
-                    </h1>
-                    <form action="">
-                        <input type="text" placeholder="Full Name" name="Name">
+                <div class="container ">
+
+                    <h2 class=" font-bold text-3xl my-5">Start your<span class="text-red-400"> personalised diabetic
+                            <br /> program today!</span></h2>
+                    <form id="form" method="post" action-xhr="https://onecare.co.in/wp-json/api/v1/lead" target="_top">
+
+                        <input class=" px-8 py-2 border-solid border rounded" type="text" name="name"
+                            placeholder="Full Name" required>
                         <br />
-                        <br />
-                        <input type="number" placeholder="Phone" name="Phone">
-                        <br />
-                        <br />
-                        <div class="flex1">
-                            <div class="flex1"> <input type="checkbox" id="Online Consultation" name="Consultation"
-                                    value="Online">
-                                <label for="Online Consultation"> Online Consultation</label>
+                        <input class=" my-5 px-8 py-2 border-solid border rounded" type="tel" name="phone"
+                            placeholder="Phone" pattern="[0-9]{10}" maxlength="10"
+                            title="Please enter a valid phone number" required>
+
+                        <div class="flex ">
+                            <div class="flex items-center mr-10">
+                                <input class="mr-2" type="checkbox" id="Online" name="Consultation" value="Online"
+                                    checked>
+                                <label for="Online">Online Consultation</label>
                             </div>
-                            <div class="flex1"><input type="checkbox" id="Clinical_Consultation" name="Consultation"
-                                    value="Clinical">
-                                <label for="Clinical_Consultation">Clinical Consultation</label>
+
+                            <div class="flex items-center">
+                                <input class="mr-2 " type="checkbox" id="Clinical" name="Consultation" value="Clinical">
+                                <label for="Clinical">Clinical Consultation</label>
                             </div>
+
                         </div>
-                        <br />
-                        <br />
+
+
+                        <input class="px-10 mt-5 bg-cyan-500 py-2 text-white rounded-3xl" type="submit" value="SUBMIT">
+
+
                     </form>
-                </div>
-            </div>
-        </section>
-        <section id="promises">
-
-            <div class="flex" style="justify-content: center;">
-
-                <div class="flex-col2">
-                    <img src="./assest/Trust.webp" alt="logo">
-                    <h4 class=" white-col center-txt">Personalised Diabetes Care program designed 'Just for you'</h4>
-                </div>
-
-                <div class="flex-col2">
-                    <img src="./assest/People.webp" alt="logo">
-                    <h4 class=" white-col center-txt">A panel of expert for all your needs</h4>
-                </div>
-
-                <div class="flex-col2">
-                    <img src="./assest/Medical_Mobile_App.webp" alt="logo">
-                    <h4 class=" white-col center-txt">State-of-the-art Health Tracking App customised for you</h4>
-                </div>
-                <div class="flex-col2">
-                    <img src="./assest/Medical_Doctor.webp" alt="logo">
-                    <h4 class=" white-col center-txt">Dedicated Health Coach for day to day guidance</h4>
-                </div>
-
-            </div>
-        </section>
-        <section id="manage">
-            <h1 class="center-txt">Manage your diabetes in 3 easy steps</h1>
-            <div class="flex">
-
-
-                <div class="blue-shd-bg flex-col2 ">
-
-                    <img src="./assest/manage1.webp" alt="logo">
 
 
 
-                    <h2 class="drk-blu-txt">Step 1</h2>
-                    <h4 class="center-txt">Meet your team of expert diabetologists, health counsellors, dieticians at
-                        OneCare
-                        Smart Clinics & get expert diagnosis & insights on your diabetes management.</h4>
-                </div>
-                <div class="pink-shd-bg flex-col2">
-
-                    <img src="./assest/manage2.webp" alt="logo">
 
 
+                    </form>
 
-                    <h2 class=" center-txt drk-blu-txt">Step 2</h2>
-                    <h4 class="center-txt">Get started on a personalised diabetes management journey designed around
-                        your needs to help you realise 10x better outcomes</h4>
-                </div>
-                <div class="blue-shd-bg flex-col2">
-
-                    <img src="./assest/manage3.webp" alt="logo">
-
-
-
-                    <h2 class=" center-txt drk-blu-txt">Step 3</h2>
-                    <h4 class="center-txt">Our panel of dedicated Health Coach will be with you every step of the way
-                        guiding you towards a better life beyond diabetes </h4>
                 </div>
             </div>
 
         </section>
+        <section>
 
 
 
-        <section id="Diabetologists" class="blue-shd-bg">
-            <h1 class="center-txt">Consult with our Expert team of <br />
-                Endocrinologists & Diabetologists <span class="orange-txt">in Bangalore</span> </h1>
 
-            <div class="flex">
-                <div class="flex1">
-                    <img src="./assest/doc1.webp" alt="logo">
-                    <div>
+            <div class="container flex justify-center p-10">
 
-                        <h3>Dr. Basavaraj GS<br />
-                            MBBS, MD, DM <br />
-                            (Endocrinology)
-                        </h3>
-                        <h4 class="orange-txt">13+ years of experience <br />
 
-                            Associated with Narayana Hrudayalaya
-                        </h4>
-                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
-                    </div>
+
+                <div class="container flex  flex-col items-center text-center">
+                    <img src="./assest/Trust.webp" alt="">
+                    <p class=" my-5" > Personalised Diabetes Care <br/>program designed 'Just for<br/> you'</p>
                 </div>
-
-
-
-
-                <div class="flex">
-                    <img src="./assest/doc2png.webp" alt="logo">
-                    <div>
-
-                        <h3>Dr. Basavaraj GS<br />
-                            MBBS, MD, DM <br />
-                            (Endocrinology)
-                        </h3>
-                        <h4 class="orange-txt">13+ years of experience <br />
-
-                            Associated with Narayana Hrudayalaya
-                        </h4>
-                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
-                    </div>
-                </div>        <div class="flex">
-                    <img src="./assest/doc3.webp" alt="logo">
-                    <div>
-
-                        <h3>Dr. Basavaraj GS<br />
-                            MBBS, MD, DM <br />
-                            (Endocrinology)
-                        </h3>
-                        <h4 class="orange-txt">13+ years of experience <br />
-
-                            Associated with Narayana Hrudayalaya
-                        </h4>
-                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
-                    </div>
+                <div class="container flex flex-col items-center text-center">
+                    <img src="./assest/People.webp" alt="">
+                    <p class=" my-5">A panel of expert<br/> for all your needs</p>
                 </div>
-
-
-
-
-
-
-
-
-
-
+                <div class="container flex flex-col items-center text-center"> <img src="./assest/Medical_Mobile_App.webp" alt="">
+                    <p class=" my-5">State-of-the-art Health Tracking<br/> App customised for you</p>
+                </div>
+                <div class="container flex flex-col items-center text-center"> <img src="./assest/Medical_Doctor.webp" alt="">
+                    <p class=" my-5">Dedicated Health Coach for <br/> day to day guidance</p>
+                </div>
 
             </div>
-
-
-
-
         </section>
-
-<section id="impact">
-
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./index.js"></script>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
